# routes/contacts.js
@@ -2,7 +2,15 @@ const express = require('express');
 const router = express.Router();
 const Contact = require('../models/Contact');
 
-// GET all contacts
+/**
+ * @swagger
+ * /contacts:
+ *   get:
+ *     summary: Get all contacts
+ *     responses:
+ *       200:
+ *         description: List of contacts
+ */
 router.get('/', async (req, res) => {
     try {
         const contacts = await Contact.find();
@@ -12,7 +20,23 @@ router.get('/', async (req, res) => {
     }
 });
 
-// GET single contact
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   get:
+ *     summary: Get a contact by ID
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: Contact found
+ *       404:
+ *         description: Contact not found
+ */
 router.get('/:id', async (req, res) => {
     try {
         const contact = await Contact.findById(req.params.id);
@@ -23,7 +47,46 @@ router.get('/:id', async (req, res) => {
     }
 });
 
-// POST create contact
+/**
+ * @swagger
+ * /contacts:
+ *   post:
+ *     summary: Create a new contact
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - firstName
+ *               - lastName
+ *               - email
+ *               - favoriteColor
+ *               - birthday
+ *             properties:
+ *               firstName:
+ *                 type: string
+ *                 example: John
+ *               lastName:
+ *                 type: string
+ *                 example: Doe
+ *               email:
+ *                 type: string
+ *                 example: john@example.com
+ *               favoriteColor:
+ *                 type: string
+ *                 example: blue
+ *               birthday:
+ *                 type: string
+ *                 format: date
+ *                 example: 1990-01-01
+ *     responses:
+ *       201:
+ *         description: Contact created
+ *       400:
+ *         description: Invalid input
+ */
 router.post('/', async (req, res) => {
     try {
         const newContact = new Contact(req.body);
@@ -36,7 +99,40 @@ router.post('/', async (req, res) => {
     }
 });
 
-// PUT update contact
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   put:
+ *     summary: Update a contact
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: string
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               firstName:
+ *                 type: string
+ *               lastName:
+ *                 type: string
+ *               email:
+ *                 type: string
+ *               favoriteColor:
+ *                 type: string
+ *               birthday:
+ *                 type: string
+ *     responses:
+ *       200:
+ *         description: Contact updated
+ *       404:
+ *         description: Contact not found
+ */
 router.put('/:id', async (req, res) => {
     try {
         const updated = await Contact.findByIdAndUpdate(req.params.id, req.body, { new: true, runValidators: true });
@@ -47,7 +143,23 @@ router.put('/:id', async (req, res) => {
     }
 });
 
-// DELETE contact
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   delete:
+ *     summary: Delete a contact
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: Contact deleted
+ *       404:
+ *         description: Contact not found
+ */
 router.delete('/:id', async (req, res) => {
     try {
         const deleted = await Contact.findByIdAndDelete(req.params.id);
